--- a/app/src/main/res/layout/item_checklist.xml
+++ b/app/src/main/res/layout/item_checklist.xml
@@ -12,11 +12,13 @@
 
         <CheckBox
             android:id="@+id/chk_item"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:background="@drawable/custom_checkbox"
             android:button="@android:color/transparent"
-            android:layout_margin="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="12dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +35,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:textColor="@color/text_color"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
@@ -41,12 +43,13 @@
 
         <Button
             android:id="@+id/btn_delete"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:padding="20dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="20dp"
             android:background="@drawable/ic_baseline_delete_24"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
