--- a/app/src/main/res/layout/item_user_applied.xml
+++ b/app/src/main/res/layout/item_user_applied.xml
@@ -102,10 +102,11 @@
         <FrameLayout
             android:id="@+id/layout_review"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_reject"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp"
-            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:padding="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -121,6 +122,14 @@
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/btn_reject"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_reject_apply"
+                app:layout_constraintTop_toBottomOf="@id/layout_review"
+                app:layout_constraintStart_toStartOf="@id/layout_review"
+                app:layout_constraintEnd_toEndOf="@id/layout_review" />
 <!--            <TextView-->
 <!--                android:id="@+id/btn_ban_review"-->
 <!--                android:layout_width="128dp"-->
@@ -136,15 +145,7 @@
 
         </FrameLayout>
 
-        <ImageView
-            android:id="@+id/btn_reject"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_reject_apply"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/layout_review"
-            app:layout_constraintStart_toStartOf="@id/layout_review"
-            app:layout_constraintEnd_toEndOf="@id/layout_review" />
+
 
 
 
