--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -287,9 +287,10 @@
 
                 <TextView
                     android:id="@+id/tv_location"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
+                    android:layout_marginEnd="24dp"
                     android:drawableStart="@drawable/ic_location"
                     android:drawableTint="@color/sharehands_green_medium"
                     android:drawablePadding="8dp"
@@ -298,6 +299,7 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_service_sort"
                     app:layout_constraintTop_toBottomOf="@id/tv_due_date_content"
+                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="서울특별시 동대문구 이문동\n한국외국어대학교"
                     android:text="@{viewModel.contents.area}"/>
 
@@ -518,14 +520,16 @@
 
                 <TextView
                     android:id="@+id/tv_contact_etc_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="@id/tv_contact_etc"
                     app:layout_constraintBottom_toBottomOf="@id/tv_contact_etc"
                     app:layout_constraintStart_toEndOf="@id/separator_vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="비공개"
                     android:textColor="@color/text_color"
                     android:textSize="16sp"
+                    android:layout_marginEnd="24dp"
                     android:text="@{viewModel.contents.contactEtc}"/>
 
 
